--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/69/fmcord#readme",
   "dependencies": {
-    "discord-rpc": "^3.1.0",
-    "fancy-log": "^1.3.3",
+    "discord-rpc": "^3.2.0",
     "lastfm": "^0.9.3"
+  },
+  "devDependencies": {
+    "prettier": "2.4.1"
   }
 }
